[gd_scene format=3 uid="uid://bw51uqmtwoxta"]

[ext_resource type="Script" uid="uid://ctjh0e85cm1oc" path="res://UI/ui.gd" id="1_2fwl4"]
[ext_resource type="Script" uid="uid://bmsjquddrkusy" path="res://UI/main_menu.gd" id="2_dajm1"]
[ext_resource type="FontFile" uid="uid://bkpi0k1kbwmr3" path="res://Assets/fonts/DePixelHalbfett.otf" id="3_3sbvi"]
[ext_resource type="Script" uid="uid://m1krevk8f4ti" path="res://UI/pause_menu.gd" id="3_e6gg6"]
[ext_resource type="Script" uid="uid://cnocs1mqv554a" path="res://UI/credits_menu.gd" id="4_hat8c"]

[node name="UI" type="Control" unique_id=1552743313]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2fwl4")

[node name="MainMenu" type="Control" parent="." unique_id=1253853406]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_dajm1")

[node name="MainPage" type="Control" parent="MainMenu" unique_id=1499382998]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MainPage" unique_id=445912655]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.5
offset_top = -93.5
offset_right = 257.5
offset_bottom = 93.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu/MainPage/VBoxContainer" unique_id=727049238]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3sbvi")
theme_override_font_sizes/font_size = 64
text = "Main Menu"

[node name="StartButton" type="Button" parent="MainMenu/MainPage/VBoxContainer" unique_id=1577657658]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3sbvi")
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="QuitButton" type="Button" parent="MainMenu/MainPage/VBoxContainer" unique_id=1330622432]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3sbvi")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="TutorialPage" type="Control" parent="MainMenu" unique_id=1396173575]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/TutorialPage" unique_id=490184529]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -60.0
offset_right = 440.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu/TutorialPage/VBoxContainer" unique_id=740287278]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_3sbvi")
theme_override_font_sizes/font_size = 32
text = "Welcome to the Minion Factory !
"

[node name="Label2" type="Label" parent="MainMenu/TutorialPage/VBoxContainer" unique_id=408105662]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Use \"WASD\" to move and \"E\" to interact"

[node name="Label3" type="Label" parent="MainMenu/TutorialPage/VBoxContainer" unique_id=1137578807]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Your Lord is under attack and requires your help!"

[node name="Label4" type="Label" parent="MainMenu/TutorialPage/VBoxContainer" unique_id=515195484]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Summon minions by performing the ritual"

[node name="ContinueButton" type="Button" parent="MainMenu/TutorialPage/VBoxContainer" unique_id=1527609135]
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[node name="PauseMenu" type="Control" parent="." unique_id=456376627]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_e6gg6")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu" unique_id=1080201504]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer" unique_id=902326594]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3sbvi")
theme_override_font_sizes/font_size = 64
text = "Pause"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer" unique_id=1597235845]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3sbvi")
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="QuitButton" type="Button" parent="PauseMenu/VBoxContainer" unique_id=890191758]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3sbvi")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="CreditsMenu" type="Control" parent="." unique_id=156149899]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_hat8c")

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsMenu" unique_id=1473977514]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -24.5
offset_right = 78.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2

[node name="WinOrLose" type="Label" parent="CreditsMenu/VBoxContainer" unique_id=1361982024]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3sbvi")
theme_override_font_sizes/font_size = 64
text = "You won !
"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="CreditsMenu/VBoxContainer" unique_id=1445897973]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3sbvi")
theme_override_font_sizes/font_size = 32
text = "thanks for playing
"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CreditsMenu/VBoxContainer" unique_id=1777780071]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3sbvi")
theme_override_font_sizes/font_size = 32
text = "Done by cool people :D
"

[node name="QuitButton" type="Button" parent="CreditsMenu/VBoxContainer" unique_id=1310148572]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_3sbvi")
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="button_up" from="MainMenu/MainPage/VBoxContainer/StartButton" to="MainMenu" method="_on_start_main_button_button_up"]
[connection signal="button_up" from="MainMenu/MainPage/VBoxContainer/QuitButton" to="MainMenu" method="_on_quit_button_button_up"]
[connection signal="button_up" from="MainMenu/TutorialPage/VBoxContainer/ContinueButton" to="MainMenu" method="_on_continue_button_button_up"]
[connection signal="button_up" from="PauseMenu/VBoxContainer/ResumeButton" to="PauseMenu" method="_on_resume_button_button_up"]
[connection signal="button_up" from="PauseMenu/VBoxContainer/QuitButton" to="PauseMenu" method="_on_quit_button_button_up"]
[connection signal="button_up" from="CreditsMenu/VBoxContainer/QuitButton" to="CreditsMenu" method="_on_quit_button_button_up"]
